# simple-ftl

./: .gitignore  Cargo.toml
src/: config.rs  ftl.rs  main.rs
