[package]
name = "simple-ftl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
log = "0.4.20"
simplelog = "0.12.1"
time = { version = "0.3.30", features = ["macros"] }
#simple_logger = "4.2.0"

