[package]
name = "simple-ftl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
log = "0.4.20"
num-integer = "0.1.45"
simplelog = "0.12.1"
time = { version = "0.3.30", features = ["macros"] }
rand = { version = "0.8.5", features = ["small_rng"] }
#simple_logger = "4.2.0"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug-assertions = false
debug = false
opt-level = 3
strip = true

lto = true

